<resources>
    <string name="app_name">PC Designer Beta V5</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="cpu">CPU</string>
    <string name="motherboards">Motherboards</string>
    <string name="ram">RAM</string>
    <string name="hdd">HDD</string>
    <string name="ssd">SDD</string>
    <string name="graphics_cards">Graphics cards</string>
    <string name="fans">Fans</string>
    <string name="optical_drives">Optical drives</string>
    <string name="towers">Towers</string>
    <string name="power_supplies">Power supplies</string>
    <string name="coolers">Coolers</string>
    <string name="thermal_paste">Thermal paste</string>

    <string name="computing_accessories">Computing accessories</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="socket">Socket</string>
    <string name="type_of_memory">Type of memory</string>
    <string name="memory">Memory</string>
    <string name="category">Category</string>
    <string name="type_of_the_optical_drive">Type of the optical drive</string>
    <string name="form_factor">Form factor</string>
    <string name="power">Power</string>

    <string name="intel">INTEL</string>
    <string name="amd">AMD</string>


    <string name="socket_1">LGA2011–3 Square ILM</string>
    <string name="socket_2">LGA2011–3 Narrow ILM</string>
    <string name="socket_3">LGA2011–3</string>
    <string name="socket_4">LGA2011 Narrow ILM</string>
    <string name="socket_5">LGA1151</string>
    <string name="socket_6">LGA1150</string>
    <string name="socket_7">LGA1155</string>
    <string name="socket_8">LGA775</string>
    <string name="socket_9">FM2 plus</string>
    <string name="socket_10">FM2</string>
    <string name="socket_11">AM3 plus</string>
    <string name="socket_12">AM3</string>
    <string name="socket_13">AM1</string>

    <string name="ram_1">Registered DDR4</string>
    <string name="ram_2">DDR4 ECC</string>
    <string name="ram_3">DDR4</string>
    <string name="ram_4">LV Registered DDR3</string>
    <string name="ram_5">Registered DDR3</string>
    <string name="ram_6">LRDIMM DDR3</string>
    <string name="ram_7">LV DDR3 ECC</string>
    <string name="ram_8">DDR3 ECC</string>
    <string name="ram_9">LV DDR3</string>
    <string name="ram_10">DDR3</string>
    <string name="ram_11">DDR2</string>
    <string name="ram_12">Registered DDR</string>
    <string name="ram_13">DDR SDRAM</string>

    <string name="hdd_1">10 Tb</string>
    <string name="hdd_2">8 Tb</string>
    <string name="hdd_3">6 Tb</string>
    <string name="hdd_4">4 Tb</string>
    <string name="hdd_5">3 Tb</string>
    <string name="hdd_6">2 Tb</string>
    <string name="hdd_7">1 Tb</string>
    <string name="hdd_8">900 Gb</string>
    <string name="hdd_9">600 Gb</string>
    <string name="hdd_10">500 Gb</string>
    <string name="hdd_11">320 Gb</string>
    <string name="hdd_12">300 Gb</string>
    <string name="hdd_13">160 Gb</string>

    <string name="ssd_1">4 Tb</string>
    <string name="ssd_2">2 Tb</string>
    <string name="ssd_3">1 Tb</string>
    <string name="ssd_4">960 Gb</string>
    <string name="ssd_5">800 Gb</string>
    <string name="ssd_6">512 Gb</string>
    <string name="ssd_7">500 Gb</string>
    <string name="ssd_8">480 Gb</string>
    <string name="ssd_9">400 Gb</string>
    <string name="ssd_10">360 Gb</string>
    <string name="ssd_11">275 Gb</string>
    <string name="ssd_12">256 Gb</string>
    <string name="ssd_13">250 Gb</string>
    <string name="ssd_14">240 Gb</string>
    <string name="ssd_15">200 Gb</string>
    <string name="ssd_16">180 Gb</string>
    <string name="ssd_17">150 Gb</string>
    <string name="ssd_18">128 Gb</string>
    <string name="ssd_19">120 Gb</string>
    <string name="ssd_20">80 Gb</string>
    <string name="ssd_21">64 Gb</string>
    <string name="ssd_22">60 Gb</string>
    <string name="ssd_23">32 Gb</string>
    <string name="ssd_24">30 Gb</string>
    <string name="ssd_25">16 Gb</string>
    <string name="ssd_26">8 Gb</string>

    <string name="video_card_1">8 Gb</string>
    <string name="video_card_2">6 Gb</string>
    <string name="video_card_3">4 Gb</string>
    <string name="video_card_4">3 Gb</string>
    <string name="video_card_5">2 Gb</string>
    <string name="video_card_6">1024 Mb</string>
    <string name="video_card_7">512 Mb</string>

    <string name="drive_1">BD-R/RE</string>
    <string name="drive_2">BD-ROM</string>
    <string name="drive_3">DVD±R/RW</string>
    <string name="drive_4">DVD+R/RW</string>
    <string name="drive_5">DVD-ROM</string>
    <string name="drive_6">CD-RW</string>
    <string name="drive_7">CD-ROM</string>
    <string name="drive_8">FDD</string>

    <string name="tower_1">Enhanced Extended ATX</string>
    <string name="tower_2">Extended ATX</string>
    <string name="tower_3">SSI CEB</string>
    <string name="tower_4">XL-ATX</string>
    <string name="tower_5">ATX</string>
    <string name="tower_6">MicroATX</string>
    <string name="tower_7">FlexATX</string>
    <string name="tower_8">Mini-DTX</string>
    <string name="tower_9">MiniITX</string>

    <string name="power_1">More than 1000 W</string>
    <string name="power_2">851 – 1000 W</string>
    <string name="power_3">801 – 850 W</string>
    <string name="power_4">751 – 800 W</string>
    <string name="power_5">701 – 750 W</string>
    <string name="power_6">651 – 700 W</string>
    <string name="power_7">601 – 650 W</string>
    <string name="power_8">551 – 600 W</string>
    <string name="power_9">501 – 550 W</string>
    <string name="power_10">451 – 500 W</string>
    <string name="power_11">401 – 450 W</string>
    <string name="power_12">351 – 400 W</string>
    <string name="power_13">301 – 350 W</string>
    <string name="power_14">Less than 300 W</string>

</resources>
