<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@mipmap/main"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_cpu"
            android:icon="@mipmap/cpu"
            android:title="@string/cpu" />
        <item
            android:id="@+id/nav_motherboard"
            android:icon="@mipmap/motherboard"
            android:title="@string/motherboards" />
        <item
            android:id="@+id/nav_ram"
            android:icon="@mipmap/ram1"
            android:title="@string/ram" />
        <item
            android:id="@+id/nav_hdd"
            android:icon="@mipmap/hdd1"
            android:title="@string/hdd" />
        <item
            android:id="@+id/nav_ssd"
            android:icon="@mipmap/ssd1"
            android:title="@string/ssd" />
        <item
            android:id="@+id/nav_video_card"
            android:icon="@mipmap/video_card1"
            android:title="@string/graphics_cards" />
        <item
            android:id="@+id/nav_fan"
            android:icon="@mipmap/fan"
            android:title="@string/fans" />
        <item
            android:id="@+id/nav_drive"
            android:icon="@mipmap/drive1"
            android:title="@string/optical_drives" />
        <item
            android:id="@+id/nav_tower"
            android:icon="@mipmap/tower1"
            android:title="@string/towers" />
        <item
            android:id="@+id/nav_power"
            android:icon="@mipmap/power"
            android:title="@string/power_supplies" />
    </group>

</menu>
